# Triolingo

./: .gitattributes  .gitignore  README.md
GoGoGolem/src/ai/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml  tempo-config.yaml
GoGoGolem/src/ai/interaction/core/components/llm_components/: llm_component.py  structured_output_llm_component.py
GoGoGolem/src/ai/interaction/core/components/realtime_components/: __init__.py  realtime_llm_component.py
GoGoGolem/src/ai/interaction/core/di/: config.py  container.py
GoGoGolem/src/ai/interaction/core/domain/usecase/: base.py
GoGoGolem/src/ai/interaction/core/infra/: firebase_client.py  model_configs.py
GoGoGolem/src/ai/interaction/core/utils/: retry_utils.py  trace_context.py  tracing.py
GoGoGolem/src/ai/interaction/server/: app.py
GoGoGolem/src/ai/interaction/server/core/: session_manager.py
GoGoGolem/src/ai/interaction/server/dto/: realtime.py  speech.py  speech_streaming.py  text.py
GoGoGolem/src/ai/interaction/server/router/realtime/: __init__.py  v1.py
GoGoGolem/src/ai/interaction/server/router/speech/: v1.py  v2.py  v3.py
GoGoGolem/src/ai/interaction/speech/: __init__.py  main.py
GoGoGolem/src/ai/interaction/speech/di/: container.py
GoGoGolem/src/ai/interaction/speech/prompts/: respond_with_expression_tool.json  text_to_text_v1.py  text_to_text_v2.py
GoGoGolem/src/ai/interaction/text/: main.py
GoGoGolem/src/ai/interaction/text/di/: container.py
GoGoGolem/src/ai/interaction/text/prompts/: __init__.py  text_to_text_v1.py
docs/: GazeTracking-Explanation.md  (+3 more)
(+691 files in other folders)
